crates/errmeta_derive/tests/fails/data_type_union.rs
#[derive(errmeta_derive::ErrorMeta)]
union AUnion {
  msg: i32,
  code: u32,
}

fn main() {}
